tests/baselines/reference/emptyTypeArgumentListWithNew.errors.txt
tests/cases/compiler/emptyTypeArgumentListWithNew.ts(2,1): error TS2558: Expected 1 type arguments, but got 0.
tests/cases/compiler/emptyTypeArgumentListWithNew.ts(2,8): error TS1099: Type argument list cannot be empty.


==== tests/cases/compiler/emptyTypeArgumentListWithNew.ts (2 errors) ====
    class foo<T> { }
    new foo<>();
    ~~~~~~~~~~~
!!! error TS2558: Expected 1 type arguments, but got 0.
           ~~
!!! error TS1099: Type argument list cannot be empty.